@@ -40,7 +40,7 @@ const char pyzk_acreate_doc[] =
 "   of the Create Flags\n"
 " completion: the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the parent node does not exist.\n"
 "NODEEXISTS the node already exists\n"
 "NOAUTH the client does not have permission.\n"
@@ -74,7 +74,7 @@ static const char pyzk_adelete_doc[] =
 " If -1 is used the version check will not take place. \n"
 " completion: the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "BADVERSION expected version does not match actual version.\n"
@@ -98,7 +98,7 @@ static const char pyzk_aexists_doc[] =
 "\n"
 " completion: the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-" OK operation completed succesfully\n"
+" OK operation completed successfully\n"
 " NONODE the node does not exist.\n"
 " NOAUTH the client does not have permission.\n"
 " data the data that will be passed to the completion routine when the \n"
@@ -120,7 +120,7 @@ static const char pyzk_aget_doc[] =
 "the client if the node changes.\n"
 " completion: the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-" OK operation completed succesfully\n"
+" OK operation completed successfully\n"
 " NONODE the node does not exist.\n"
 " NOAUTH the client does not have permission.\n"
 " data the data that will be passed to the completion routine when \n"
@@ -148,7 +148,7 @@ static const char pyzk_aset_doc[] =
 "immediately and invoke the completion routine when the request completes.\n"
 " completion the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "BADVERSION expected version does not match actual version.\n"
@@ -175,7 +175,7 @@ static const char pyzk_aget_children_doc[] =
 "\n"
 " completion the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "\n"
@@ -192,7 +192,7 @@ static const char pyzk_async_doc[] =
 "separating ancestors of the node.\n"
 " completion the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "\n"
@@ -211,7 +211,7 @@ const static char pyzk_aget_acl_doc[] =
 "(Subsequent parameters are optional)\n"
 " completion: the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "\n"
@@ -231,7 +231,7 @@ const char pyzk_aset_acl_doc[] =
 " buffer: the buffer holding the acls to be written to the node.\n"
 " completion: the routine to invoke when the request completes. The completion\n"
 "will be triggered with one of the following codes passed in as the rc argument:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "INVALIDACL invalid ACL specified\n"
@@ -373,7 +373,7 @@ static const char pyzk_delete_doc[] =
 "\n"
 "RETURNS:\n"
 "One of the following values is returned.\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "BADVERSION expected version does not match actual version.\n"
@@ -398,7 +398,7 @@ static const char pyzk_exists_doc[] =
 "RETURNS:\n"
 " the return stat value of the node.\n"
 "EXCEPTIONS:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "BADARGUMENTS - invalid input parameters\n"
@@ -445,7 +445,7 @@ static const char pyzk_set_doc[] =
 "\n"
 "RETURNS:\n"
 " the return code for the function call.\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "EXCEPTIONS:\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
@@ -483,7 +483,7 @@ static const char pyzk_set_acl_doc[] =
 " acl: the acl to be set on the path. \n"
 "\n"
 "RETURNS:\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "EXCEPTIONS:\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
@@ -533,7 +533,7 @@ static const char pyzk_set2_doc[] =
 "\n"
 "RETURNS:\n"
 " the stat structure for the target znode\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "EXCEPTIONS:\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
@@ -584,7 +584,7 @@ static const char pyzk_get_doc[] =
 " the minimum of bufferlen and the true length of the znode's data. \n"
 "RETURNS:\n"
 " the data associated with the node\n"
-"OK operation completed succesfully\n"
+"OK operation completed successfully\n"
 "NONODE the node does not exist.\n"
 "NOAUTH the client does not have permission.\n"
 "BADARGUMENTS - invalid input parameters\n"
